2007-04-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/pci/pci.c: More stdint.h fixed-size types.

2007-03-31	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/bootloader/bootldr.h, shared/bootloader/em86.c,
	shared/bootloader/pci.c, shared/bootloader/pci.h,
	shared/irq/irq_init.c, shared/pci/detect_raven_bridge.c,
	shared/pci/pci.c, shared/pci/pcifinddevice.c:
	Use stdint.h fixed-size types.

2007-03-11	Joel Sherrill <joel@OARcorp.com>

	* shared/startup/bspstart.c: Remove assignments of
	Cpu_table.do_zero_of_workspace to TRUE since TRUE is the default
	value in boot_card.c

2007-01-29	Till Straumann <strauman@slac.stanford.edu>

	* shared/vme/VMEConfig.h:
	Added more comments about the semantics of the various
	symbols BSPs should define in this file.
	Removed declarations of BSP_VMEInit(), BSP_VMEIrqMgrInstall().

	* shared/vme/vmeconfig.c: declare BSP_VMEInit(),
	BSP_VMEIrqMgrInstall() here.

	* Makefile.am, shared/vme/README,
	* shared/vme/vme_universe_dma.c (added): Added glue code
	implementing the VMEDMA.h API using the vmeUniverse driver.

2007-01-20      Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* gen5200/mscan/mscan.c, gen5200/mscan/mscan.h,
	gen5200/mscan/mscan_int.h:
	split mscan.h into two headers, corrected CAN filtering
	code to
	support remote requests

2007-01-19	Till Straumann <strauman@slac.stanford.edu>

	* mvme5500/Makefile.am, mvme5500/preinstall.am,
	mvme5500/vme/VMEConfig.h, mvme5500/vme/VME.h,
	mvme5500/vme/vmeconfig.c:
	removed copies of vmeconfig.c, VME.h - use generic
	versions instead.

2007-01-19	Till Straumann <strauman@slac.stanford.edu>

	* Makefile.am, ep1a/Makefile.am, ep1a/preinstall.am,
	motorola_powerpc/Makefile.am, motorola_powerpc/preinstall.am,
	score603e/Makefile.am, score603e/preinstall.am,
	shared/vme/VME.h: moved VME.h from libbsp/powerpc/shared/vme to
	libbsp/shared/vmeUniverse; eventually, this (and other)
	VME API headers should migrate to cpukit.
